Shishi NEWS -- History of user-visible changes.                 -*- outline -*-
Copyright (C) 2002, 2003, 2004, 2005, 2006 Simon Josefsson
See the end for copying conditions.

* Version 0.0.31 (unreleased)

* Version 0.0.30 (released 2006-11-01)

** Update STARTTLS extension to match latest drafts.
Shishi now implements draft-josefsson-krb-tcp-expansion-02.txt and
draft-josefsson-kerberos5-starttls-02.txt.

** Fix failure when reading large integers from ASN.1 structure.
This can manifest itself by giving error messages such as 'Replay
protection value (nonce) differ between request and reply.'.  Added a
new self test "nonce" to detect errors in these routines.  Reported by
Alberto Fondi.

* Version 0.0.29 (released 2006-11-01)

** Add man page for ccache2shishi.

* Version 0.0.28 (released 2006-11-01)

** New command line tool "ccache2shishi".
The tool will read tickets from /tmp/krb5cc_UID (by default) and will
write them to ~/.shishi/tickets.

** A description of the ccache file format were added in doc/ccache.txt.

** A self-contained standalone parser of the ccache format added.
See lib/ccache.h and lib/ccache.c.  The intention is that they should
be usable outside of Shishi, and it doesn't use any Shishi specific
header files or functions.  It also avoids heap memory handling.

** New APIs to read MIT ccache files.
shishi_tkts_add_ccache_mem
shishi_tkts_add_ccache_file
shishi_tkts_from_ccache_mem
shishi_tkts_from_ccache_file

** New APIs to support ccache reading.
shishi_enckdcreppart_authtime_set
shishi_enckdcreppart_starttime_set
shishi_enckdcreppart_renew_till_set
shishi_tkts_default_ccache_guess
shishi_tkts_default_ccache
shishi_tkts_default_ccache_set

** Fix build errors for missing arcfour_stream when using --with-libgcrypt.
Reported by abhijit mitra <abhijit_kly@yahoo.co.in>.

* Version 0.0.27 (released 2006-09-15)

** New command line tool "keytab2shishi".
The tool will read host keys from /etc/krb5.keytab (by default) and