@@ -1,8 +1,12 @@
 Shishi NEWS -- History of user-visible changes.                 -*- outline -*-
-Copyright (C) 2002, 2003, 2004, 2005, 2006 Simon Josefsson
+Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007 Simon Josefsson
 See the end for copying conditions.
 
 * Version 0.0.31 (unreleased)
+
+** Verify the KDC's certificate against a CA certificate in the client.
+The CA is by default stored in ~/.shishi/client.ca in PEM format.
+Suggested by Alberto Fondi <alberto.fondi@lnf.infn.it>.
 
 * Version 0.0.30 (released 2006-11-01)
 
